Added OneSignal Push Notification Service

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,8 +69,22 @@ android {
     }
 }
 
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
 flutter {
     source '../..'
+}
+
+buildscript {
+    repositories {
+        // ...
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
+    }
+    dependencies {
+        // ...
+        // OneSignal-Gradle-Plugin
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
+    }
 }
 
 dependencies {
