--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,16 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
+  awesome_notifications: ^0.6.21
   cached_network_image: ^3.2.0
-  cloud_firestore: ^3.1.17
-  cloud_functions: ^3.2.16
+  cloud_firestore: ^3.3.0
   colorful_safe_area: ^0.3.0
+  device_info_plus: ^4.0.0
   dio: ^4.0.4
   double_back_to_close_app: ^2.1.0
   dynamic_height_grid_view: ^0.0.3
-  firebase_auth: ^3.3.19
-  firebase_core: ^1.17.1
+  firebase_auth: ^3.4.2
+  firebase_core: ^1.19.2
   firebase_storage: ^10.2.17
   flutter:
     sdk: flutter
@@ -30,7 +31,7 @@ dependencies:
   intl: ^0.17.0
   jiffy: ^5.0.0
   lottie: ^1.3.0
-  page_transition: ^2.0.9
+  onesignal_flutter: ^3.3.2
   provider: ^6.0.2
   razorpay_flutter: ^1.3.0
   skeletons: ^0.0.3
