--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
+  avatar_glow: ^2.0.2
   awesome_notifications: ^0.6.21
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.3.0
@@ -25,6 +26,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.0.2
   flutter_remix: ^0.0.3
+  flutter_speech: ^2.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^0.8.5+3
