--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   intl: ^0.17.0
   jiffy: ^5.0.0
   lottie: ^1.3.0
+  oktoast: ^3.2.0
   onesignal_flutter: ^3.3.2
+  permission_handler: ^10.0.0
   provider: ^6.0.2
   razorpay_flutter: ^1.3.0
   skeletons: ^0.0.3
