--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   country_calling_code_picker: ^2.0.1
   dio: ^4.0.4
   dynamic_height_grid_view: ^0.0.3
+  email_auth: ^1.0.0
   firebase_auth: ^3.4.2
   firebase_core: ^1.19.2
   firebase_storage: ^10.2.17
