--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cloud_firestore: ^3.3.0
   colorful_safe_area: ^0.3.0
   country_calling_code_picker: ^2.0.1
+  cupertino_icons: ^1.0.5
   dio: ^4.0.4
   dynamic_height_grid_view: ^0.0.3
   email_auth: ^1.0.0
@@ -72,6 +73,7 @@ flutter:
 
   assets:
     - assets/
+    - fonts/
     - .env.local
 
   fonts:
